--- a/www/portfolio.html
+++ b/www/portfolio.html
@@ -20,19 +20,19 @@
             <a href="" class="search_icon"><img src="images/search.png"></a>
         </div>
         <ul class="menu">
-            <a href="index.html" class="menu_item_active"><li>Home</li></a>
-            <a href="portfolio.html" class="menu_item"><li>Portfolio</li></a>
-            <a href="about.html" class="menu_item"><li>About</li></a>
-            <a href="contact.html" class="menu_item"><li>Contact</li></a>
-            <a href="" class="menu_item_blog"><li>Blog</li></a>
+            <a href="index.html"><li class="menu_item">Home</li></a>
+            <a href="portfolio.html"><li class="menu_item_active">Portfolio</li></a>
+            <a href="about.html"><li class="menu_item">About</li></a>
+            <a href="contact.html"><li class="menu_item">Contact</li></a>
+            <li class="menu_item_blog">Blog</li>
         </ul>
         <div class="menu_icon ti-align-justify"></div>
         <ul class="menu_width_767px">
-            <a href="index.html" class="menu_width_767px_item"><li>Home</li></a>
-            <a href="portfolio.html" class="menu_width_767px_item"><li>Portfolio</li></a>
-            <a href="about.html" class="menu_width_767px_item"><li>About</li></a>
-            <a href="contact.html" class="menu_width_767px_item"><li>Contact</li></a>
-            <a href="" class="menu_width_767px_item"><li>Blog</li></a>
+            <a href="index.html"><li class="menu_width_767px_item">Home</li></a>
+            <li class="menu_width_767px_item">Portfolio</li>
+            <a href="about.html"><li class="menu_width_767px_item">About</li></a>
+            <a href="contact.html"><li class="menu_width_767px_item">Contact</li></a>
+            <li class="menu_width_767px_item">Blog</li>
         </ul>
     </div>
 </header>
